# neo4j-cw-manager

./: .env.example  .gitignore  .mcp.sample.json  CLAUDE.md  README.md  main.py  pyproject.toml
src/neo4j_cw_manager/: __init__.py  server.py
src/neo4j_cw_manager/core/: __init__.py  config.py  connection.py  nodes.py  operations.py  query.py  relationships.py
src/neo4j_cw_manager/tools/: __init__.py
src/neo4j_cw_manager/tools/memory/: __init__.py  env.py  index.py  issues.py  nodes.py  query.py  related.py  relationships.py  search.py  utils.py
src/neo4j_cw_manager/tools/mermaid_checker/: __init__.py  block_lister.py  checker.py  code_checker.py  constants.py  file_checker.py  models.py  parser.py
