[project]
name = "neo4j-cw-manager"
version = "0.1.0"
description = "タスク管理、ナレッジ管理ツール with Neo4j"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.22.0",
]

[project.scripts]
neo4j-cw-manager = "neo4j_cw_manager.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_cw_manager"]
